--- a/style.css
+++ b/style.css
@@ -1,9 +1,38 @@
+body {
+    background-color: #EEF2E6;
+    margin: 40px auto;
+    max-width: 500px
+}
+
+h1, h3 {
+    color: #1C6758
+}
+
+h3 {
+    text-align: center;
+    margin-top: -1rem;
+}
+
+
+
+.contactBody {
+    background-color: #EEF2E6;
+    margin: 40px auto;
+    max-width: 267px
+}
+
 .profile {
     background-color:white;
     width: 200px;
     margin: 0 3rem;
+    border-radius: 100%
+}
+.profile:hover {
+    background-color: white;
+    width: 200px;
+    margin: 0 3rem;
     box-shadow: 0 0 16px 5px olive;
-    border-radius: 1000px
+    border-radius: 100%
 }
 
 .center, .bio {
@@ -14,7 +43,22 @@
 .bio {
     margin: 2rem;
     width: 100px;
+    
 }
 .language, .star {
     padding:0px 1rem .5rem 0px;
+    
+}
+
+hr {
+    border-style: none none dotted none;
+    border-color: #D6CDA4;
+    border-width: 6px;
+    width: 10%;
+    max-width: 4rem;
+    margin: 30px auto;
+}
+
+.star:hover {
+    transform: scale(1.1);
 }
